tests/negative/test-fail-struct4.std
Fatal error: exception Failure("type_err:field type mismatch in struct expression")